Chat overlay and llama3 integration

--- a/ai-ml/requirements.txt
+++ b/ai-ml/requirements.txt
@@ -1,9 +1,14 @@
-flask==2.2.5
-transformers==4.30.0
-torch==2.0.1
-numpy<2
-xformers
-langchain==0.0.187
+langchain==0.3.11
+langchain-community==0.3.11
+langchain-core==0.3.25
+langsmith==0.2.0
 faiss-cpu==1.7.4
 openai==0.27.8
 Flask==2.2.5
+pydantic==2.7.4
+SQLAlchemy==2.0.36
+PyYAML==6.0.2
+aiohttp==3.11.10
+tenacity==9.0.0
+async-timeout==4.0.3
+numpy==1.26.4
