--- a/ai-ml/Dockerfile.ai-ml
+++ b/ai-ml/Dockerfile.ai-ml
@@ -1,20 +1,13 @@
-# Use an official Python image
 FROM python:3.9-slim
 
-# Set the working directory
 WORKDIR /app
 
-# Copy only requirements.txt first to leverage caching
 COPY requirements.txt .
-
-# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application files
 COPY . .
 
-# Expose the port Flask will run on
-EXPOSE 5000
+ENV HUGGINGFACE_API_KEY="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"
 
-# Start the Flask server
+EXPOSE 5000
 CMD ["python", "app.py"]
