--- a/ai-ml/requirements.txt
+++ b/ai-ml/requirements.txt
@@ -1,14 +1,32 @@
-langchain==0.3.11
-langchain-community==0.3.11
+# LangChain Core and Dependencies
+langchain==0.3.12
 langchain-core==0.3.25
-langsmith==0.2.0
+langchain-huggingface==0.1.2
+langsmith==0.2.3
+langchain-text-splitters==0.3.3
+
+# HuggingFace Dependencies
+huggingface_hub==0.26.5
+transformers==4.47.0
+sentence-transformers==3.3.1
+torch==2.5.1
+tokenizers==0.21.0
+
+# Flask API
+Flask==2.1.3
+Werkzeug==2.3.8
+
+# Vector Search
 faiss-cpu==1.7.4
-openai==0.27.8
-Flask==2.2.5
-pydantic==2.7.4
-SQLAlchemy==2.0.36
-PyYAML==6.0.2
-aiohttp==3.11.10
-tenacity==9.0.0
-async-timeout==4.0.3
+
+# Utilities
 numpy==1.26.4
+scipy==1.13.1
+pandas==2.2.3
+PyYAML==6.0.1
+requests==2.32.3
+tqdm==4.67.1
+python-dotenv==1.0.1
+
+# NLP Tools
+nltk==3.8.1
