master-layout, toolbal, sidebar and other pages

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,9 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "esModuleInterop": true, // Add this
+    "skipLibCheck": true 
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
