--- a/ai-ml/requirements.txt
+++ b/ai-ml/requirements.txt
@@ -1,32 +1,56 @@
 # LangChain Core and Dependencies
+# langchain==0.3.12
+# langchain-core==0.3.25
+# langchain-huggingface==0.1.2
+# langsmith==0.2.3
+# langchain-text-splitters==0.3.3
+
+# # HuggingFace Dependencies
+# huggingface_hub==0.26.5
+# transformers==4.47.0
+# sentence-transformers==3.3.1
+# torch==2.5.1
+# tokenizers==0.21.0
+
+# # Flask API
+# Flask==2.1.3
+# Werkzeug==2.3.8
+
+# # Vector Search
+# faiss-cpu==1.7.4
+
+# # Utilities
+# numpy==1.26.4
+# scipy==1.13.1
+# pandas==2.2.3
+# PyYAML==6.0.1
+# requests==2.32.3
+# tqdm==4.67.1
+# python-dotenv==1.0.1
+
+# # NLP Tools
+# nltk==3.8.1
+
 langchain==0.3.12
-langchain-core==0.3.25
-langchain-huggingface==0.1.2
-langsmith==0.2.3
-langchain-text-splitters==0.3.3
-
-# HuggingFace Dependencies
-huggingface_hub==0.26.5
-transformers==4.47.0
-sentence-transformers==3.3.1
-torch==2.5.1
-tokenizers==0.21.0
-
-# Flask API
-Flask==2.1.3
-Werkzeug==2.3.8
-
-# Vector Search
-faiss-cpu==1.7.4
-
-# Utilities
-numpy==1.26.4
-scipy==1.13.1
-pandas==2.2.3
-PyYAML==6.0.1
-requests==2.32.3
-tqdm==4.67.1
-python-dotenv==1.0.1
-
-# NLP Tools
-nltk==3.8.1
+langchain_community
+langsmith
+langchain-text-splitters
+huggingface_hub
+transformers
+weaviate-client==4.10.2
+sentence-transformers
+torch
+faiss-cpu
+Flask
+Werkzeug
+numpy
+scipy
+pandas
+PyYAML
+requests
+tqdm
+python-dotenv
+nltk
+pyopenssl==22.1.0
+markupsafe==2.1.1
+gunicorn==20.1.0
