--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -4,32 +4,33 @@ on:
   push:
     branches:
       - main
-      - development
-      - feature/*
+      - develop
+      - 'feature/*'
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       
-      - uses: aws-actions/configure-aws-credentials@v4
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ap-southeast-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      
-      - name: Login to ECR
+
+      - name: Login to AWS ECR (Backend)
         run: |
-          aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin <ECR_URI_BACKEND>
+          aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin ${{ secrets.ECR_BACKEND_URI }}
 
       - name: Build & Push Backend Docker Image
         run: |
-          docker build -t scope3-mvp-backend -f ./backend/Dockerfile.backend .
-          docker tag scope3-mvp-backend:latest <ECR_URI_BACKEND>:latest
-          docker push <ECR_URI_BACKEND>:latest
+          docker build -t scope3-mvp-backend -f ./backend/Dockerfile.backend ./backend
+          docker tag scope3-mvp-backend:latest ${{ secrets.ECR_BACKEND_URI }}:latest
+          docker push ${{ secrets.ECR_BACKEND_URI }}:latest
 
-      - name: Deploy to EC2 via SSH (backend)
+      - name: Deploy Backend to EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -37,5 +38,5 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             docker stop scope3-backend || true && docker rm scope3-backend || true
-            docker pull <ECR_URI_BACKEND>:latest
-            docker run -d -p 3000:3000 --name scope3-backend <ECR_URI_BACKEND>:latest
+            docker pull ${{ secrets.ECR_BACKEND_URI }}:latest
+            docker run -d -p 3000:3000 --name scope3-backend ${{ secrets.ECR_BACKEND_URI }}:latest
