--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - develop
+      - development
       - 'feature/*'
 
 jobs:
@@ -37,6 +37,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin ${{ secrets.ECR_BACKEND_URI }}
             docker stop scope3-backend || true && docker rm scope3-backend || true
             docker pull ${{ secrets.ECR_BACKEND_URI }}:latest
             docker run -d -p 3000:3000 --name scope3-backend ${{ secrets.ECR_BACKEND_URI }}:latest
