--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - develop
+      - development
       - 'feature/*'
 
 jobs:
@@ -37,6 +37,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin ${{ secrets.ECR_FRONTEND_URI }}
             docker stop scope3-frontend || true && docker rm scope3-frontend || true
             docker pull ${{ secrets.ECR_FRONTEND_URI }}:latest
             docker run -d -p 80:80 --name scope3-frontend ${{ secrets.ECR_FRONTEND_URI }}:latest
