--- a/ai-ml/Dockerfile.ai-ml
+++ b/ai-ml/Dockerfile.ai-ml
@@ -1,42 +1,11 @@
-# Base image
-FROM python:3.9-slim
+FROM python:3.10-slim
 
-# Set working directory
 WORKDIR /app
 
-# Copy only requirements.txt first to leverage Docker cache
-COPY requirements.txt /app/requirements.txt
+COPY requirements.txt .
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Install OS dependencies for FAISS and NLP tools
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install only missing Python packages
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-deps -r requirements.txt
-
-
-# Copy project files
-COPY . /app
-
-# # Install dependencies
-# RUN pip install -r requirements.txt
-
-# Set NLTK data path
-ENV NLTK_DATA=/root/nltk_data
-ENV HF_API_TOKEN="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"
+COPY . .
 
 EXPOSE 5000
-
-# Default command: Generate clean embeddings and start the API
-CMD ["sh", "-c", "\
-    if [ ! -f 'output/combined_clean_embeddings.json' ]; then \
-        echo 'Generating embeddings...'; \
-        python scripts/generate_clean_embeddings.py; \
-    else \
-        echo 'Embeddings already exist. Skipping generation.'; \
-    fi && \
-    echo 'Starting Flask microservice...' && \
-    python app.py"]
+CMD ["python", "app.py"]
