canvas dashboard implementation

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -66,14 +66,17 @@ services:
   postgres:
     image: postgres:latest
     container_name: scope3_postgres
+    restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: P@ssw0rd
       POSTGRES_DB: scope3
     ports:
       - "5432:5432"
     volumes:
-      - ../database/postgres:/docker-entrypoint-initdb.d
+      - ../database/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../database/postgres/data:/var/lib/postgresql/data
+    #postgres_data: /var/lib/postgresql/data
 
   neo4j:
     image: neo4j:latest
@@ -109,3 +112,15 @@ services:
       - ../rasa/actions:/app/actions
     ports:
       - "5055:5055"
+
+  data-insight-agent:
+    build:
+      context: ../ai-ml/agents/data_insight_agent
+    ports:
+      - "5001:5000"
+
+  narrative-agent:
+    build:
+      context: ../ai-ml/agents/narrative_agent
+    ports:
+      - "5002:5000"
