--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,27 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^19.0.4",
-    "@angular/common": "^19.0.5",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/material": "^19.0.4",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.0.5",
-    "@angular/router": "^19.0.5",
+    "@angular/animations": "^19.2.6",
+    "apexcharts": "^4.5.0",
     "d3": "^7.9.0",
     "echarts": "^5.4.0",
-    "frontend": "file:",
+    "ng-apexcharts": "^1.15.0",
     "ngx-echarts": "^14.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.5",
+    "@angular-devkit/build-angular": "^19.2.6",
+    "@angular/cdk": "^19.2.6",
+    "@angular/cli": "^19.2.6",
+    "@angular/common": "^19.2.6",
+    "@angular/compiler": "^19.2.6",
+    "@angular/compiler-cli": "^19.2.6",
+    "@angular/core": "^19.2.6",
+    "@angular/forms": "^19.2.6",
+    "@angular/material": "^19.2.6",
+    "@angular/platform-browser": "^19.2.6",
+    "@angular/platform-browser-dynamic": "^19.2.6",
+    "@angular/router": "^19.2.6",
     "@types/echarts": "^4.9.22",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
