--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "axios": "^1.3.4",
     "backend": "file:",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.14.1",
     "sequelize": "^6.37.5"
