--- a/ai-ml/.gitignore
+++ b/ai-ml/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 *$py.class
 *.so
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -30,22 +31,8 @@ ENV/
 *.swp
 *.swo
 
-# Test
-tests/
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Development
-.git
-.gitignore
-*.bat
-*.sh
-README.md
-
 # Project specific
-models/*
-!models/.gitkeep
+models/
 logs/
-.env*
+.env
 *.log
