--- a/ai-ml/requirements.txt
+++ b/ai-ml/requirements.txt
@@ -1,59 +1,49 @@
-# LangChain Core and Dependencies
-# langchain==0.3.12
-# langchain-core==0.3.25
-# langchain-huggingface==0.1.2
-# langsmith==0.2.3
-# langchain-text-splitters==0.3.3
+# Core LangChain
+langchain>=0.1.0
+langchain-huggingface>=0.0.6
+langsmith>=0.0.77
 
-# # HuggingFace Dependencies
-# huggingface_hub==0.26.5
-# transformers==4.47.0
-# sentence-transformers==3.3.1
-# torch==2.5.1
-# tokenizers==0.21.0
+# LLM and Embeddings
+huggingface_hub>=0.20.0
+transformers>=4.36.0
+sentence-transformers>=2.2.0
+torch>=2.1.0
+tiktoken>=0.5.2
 
-# # Flask API
-# Flask==2.1.3
-# Werkzeug==2.3.8
+# Vector Storage
+faiss-cpu>=1.7.4
 
-# # Vector Search
-# faiss-cpu==1.7.4
+# Graph Database
+neo4j>=5.14.0
 
-# # Utilities
-# numpy==1.26.4
-# scipy==1.13.1
-# pandas==2.2.3
-# PyYAML==6.0.1
-# requests==2.32.3
-# tqdm==4.67.1
-# python-dotenv==1.0.1
+# NLP and ML
+spacy>=3.7.0
+scikit-learn>=1.3.0
+nltk>=3.8.0
+numpy>=1.24.0
+scipy>=1.11.0
+pandas>=2.1.0
 
-# # NLP Tools
-# nltk==3.8.1
-
-langchain==0.3.12
-langchain_community
-langsmith
-langchain-text-splitters
-huggingface_hub
-transformers
-weaviate-client==4.10.2
-sentence-transformers
-torch
-faiss-cpu
-Flask
-Werkzeug
-numpy
-scipy
-pandas
-PyYAML
-requests
-tqdm
-python-dotenv
-nltk
-pyopenssl==22.1.0
-markupsafe==2.1.1
+# API and Web
+Flask>=3.0.0
+Werkzeug>=3.0.0
+flask-restx>=1.3.0
+flask-cors>=4.0.0
 gunicorn==20.1.0
-PyPDF2
-typing_extensions
-urllib3
+gevent>=23.9.0
+
+# PDF Processing
+PyPDF2>=3.0.0
+
+# Utilities
+PyYAML>=6.0.0
+requests>=2.31.0
+tqdm>=4.66.0
+python-dotenv>=1.0.0
+typing_extensions>=4.8.0
+urllib3>=2.1.0
+
+# Security
+pyopenssl>=23.3.0
+markupsafe>=2.1.1
+psutil
