--- a/ai-ml/Dockerfile.ai-ml
+++ b/ai-ml/Dockerfile.ai-ml
@@ -2,56 +2,56 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Install OS dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
-    gcc \
-    g++ \
-    gfortran \
-    libopenblas-dev \
-    liblapack-dev \
-    libffi-dev \
-    libpq-dev \
-    git \
     curl \
- && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip, setuptools, wheel
-RUN pip install --upgrade pip setuptools wheel
-
-# Copy requirements and install dependencies
+# Copy only the requirements file first
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Create necessary directories
-RUN mkdir -p /app/kb/vectors /app/kb/documents /app/kb/metadata /app/kb/cache
+# Pre-download NLTK data
+RUN python -m nltk.downloader -d /usr/local/share/nltk_data \
+    punkt \
+    punkt_tab \
+    averaged_perceptron_tagger \
+    maxent_ne_chunker \
+    words \
+    stopwords \
+    wordnet
 
-# Copy source code and config files
-COPY . .
+# Copy the entire src directory to ensure all modules are available
+COPY src/ ./src/
+
+# Create necessary directories
+RUN mkdir -p \
+    /app/models/faiss_index \
+    /app/logs \
+    /app/uploads \
+    /app/kb
 
 # Set environment variables
-ENV PYTHONPATH=/app \
-    DOCUMENT_MODEL=sentence-transformers/all-mpnet-base-v2 \
-    CHUNK_MODEL=sentence-transformers/all-MiniLM-L6-v2 \
-    SEMANTIC_MODEL=sentence-transformers/paraphrase-multilingual-mpnet-base-v2 \
-    FAISS_INDEX_TYPE=IVFFlat \
-    VECTOR_DIMENSION=768 \
-    KB_STORAGE_DIR=/app/kb \
-    PORT=5000 \
-    FLASK_APP=src.rag.api.app:app \
-    FLASK_ENV=development \
-    FLASK_DEBUG=1
+ENV PYTHONPATH=/app
+ENV FLASK_APP=src.rag.api.app
+ENV FLASK_ENV=development
+ENV PYTHONUNBUFFERED=1
+ENV NLTK_DATA=/usr/local/share/nltk_data
 
-# Debug: Print directory structure and verify app.py location
-RUN echo "=== Directory Structure ===" && \
-    ls -R /app/src/rag/api && \
-    echo "=== Checking app.py existence ===" && \
-    find /app -name "app.py" && \
-    echo "=== Python path ===" && \
-    python -c "import sys; print('\n'.join(sys.path))"
+# Initialize base models
+RUN python -c "\
+from src.rag.embeddings.document_embedder import MultiLevelEmbedder; \
+from src.rag.retrieval.multi_vector_retriever import MultiVectorRetriever; \
+embedder = MultiLevelEmbedder(); \
+retriever = MultiVectorRetriever();"
 
 # Expose port
 EXPOSE 5000
 
-# Run the app with Python directly
-CMD ["python", "run.py"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+    CMD curl -f http://localhost:5000/api/rag/health || exit 1
+
+# Start Flask
+CMD ["python", "-m", "flask", "run", "--host=0.0.0.0", "--port=5000"]
