--- a/frontend/Dockerfile.frontend
+++ b/frontend/Dockerfile.frontend
@@ -1,5 +1,5 @@
-# Stage 1: Build the Angular application
-FROM node:20-slim as build
+# Stage 1: Development environment
+FROM node:20-slim
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -10,20 +10,14 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+# Install Angular CLI globally
+RUN npm install -g @angular/cli
+
 # Copy the Angular project files into the container
 COPY . .
 
-# Build the Angular app for production
-RUN npm run build -- --output-path=dist --configuration=production
+# Expose port 4200 for ng serve
+EXPOSE 4200
 
-# Stage 2: Serve the Angular application using a lightweight server
-FROM nginx:stable-alpine
-
-# Copy built Angular files from the build stage
-COPY --from=build /app/dist /usr/share/nginx/html
-
-# Expose port 80 to serve the app
-EXPOSE 80
-
-# Start Nginx server
-CMD ["nginx", "-g", "daemon off;"]
+# Start the development server with host 0.0.0.0 to allow external access
+CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200", "--disable-host-check"]
